# Crust

./: .editorconfig  Cargo.toml  README.md  config.toml  flake.nix  rust-toolchain.toml
common/: Cargo.toml
common/src/: chat.rs  client.rs  config.rs  game.rs  lib.rs  packet.rs
common/src/packet/: join_game.rs  position_and_look.rs
macros/src/: lib.rs
protocol/src/: de.rs  lib.rs  ser.rs
proxy/: Cargo.toml  mix.exs
proxy/lib/: application.ex  client.ex  connection.ex  proxy.ex  util.ex
proxy/src/: main.rs  packet.rs
server/: Cargo.toml
server/src/: handler.rs  main.rs
server/src/structures/: client.rs
util/: Cargo.toml
util/src/: lib.rs  packet.rs  version.rs
