[package]
name = "crust-server"
version = "0.1.0"
edition = "2021"

[dependencies]
util = { path = "../util", package = "crust-util" }
common = { path = "../common", package = "crust-common" }

log = "0.4.17"
env_logger = "0.9.0"

uuid = { version = "1.1.2", features = [ "v4" ] }

serde = { version = "1.0.140", features = [ "derive" ] }
serde_json = "1.0.82"
toml = "0.5.9"

